--- a/src/app.scss
+++ b/src/app.scss
@@ -1,8 +1,26 @@
+/* Write your global styles here, in SCSS syntax. Variables and mixins from the src/variables.scss file are available here without importing */ /* Import only what you need from Bulma */
+
+@import 'bulma/sass/utilities/_all';
+
+@import 'bulma/sass/base/_all';
+
+@import 'bulma/sass/elements/_all';
+
+@import 'bulma/sass/form/_all';
+
+@import 'bulma/sass/components/_all';
+
+@import 'bulma/sass/grid/_all';
+
+@import 'bulma/sass/helpers/_all';
+
+@import 'bulma/sass/layout/_all';
+
 @import '@fontsource/fira-mono';
 
 :root {
-	font-family: "Noto Sans", Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 
-		Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	font-family: 'Noto Sans', Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+		Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	--font-mono: 'Fira Mono', monospace;
 	--pure-white: #ffffff;
 	--primary-color: #b9c6d2;
@@ -54,7 +72,7 @@ h1,
 h2,
 p {
 	font-weight: 400;
-	color: var(--heading-color);
+	// color: var(--heading-color);
 }
 
 p {
@@ -62,7 +80,7 @@ p {
 }
 
 a {
-	color: var(--accent-color);
+	// color: var(--accent-color);
 	text-decoration: none;
 }
 
@@ -87,7 +105,7 @@ pre {
 	box-shadow: 2px 2px 6px rgb(255 255 255 / 25%);
 	padding: 0.5em;
 	overflow-x: auto;
-	color: var(--text-color);
+	// color: var(--text-color);
 }
 
 input,
